tests/NormalTests/paczka1/fuzzy1/98424222.err
Error in line 3: FQel3x6r A741 52,0
Error in line 2: A741 A810 87,2
Error in line 6: dyNrJ A741 6,8
Error in line 5: FQel3x6r S881 25,4
Error in line 12: s7CLZ A741 33,3
Error in line 20: FQel3x6r S881 46,3
Error in line 18: 8OB A540 57,1
Error in line 28: 8OB S881 33,0
